# MP_WS

./: .gitignore  README.md
src/camera_calibration/: CMakeLists.txt  camera_calibration.yaml  camera_calibration_static.yaml  handeye_calibration_result.yaml  handeye_calibration_result_static.yaml  package.xml  内参.txt
src/camera_calibration/images/handeye/: pose (copy).txt  pose.txt
src/camera_calibration/images/handeye_static/: pose.txt
src/camera_calibration/scripts/: coordinate_transform.py
src/camera_calibration/src/: calibrate.cpp  handeyecalib.cpp
src/cr5_description/: CMakeLists.txt  robot_model.txt  urdf.rviz
src/cr5_description/launch/: display.launch  display_dh.launch
src/cr5_description/urdf/: CR5URDF.urdf  camera.xacro  compute  cr5.urdf  cr5.urdf.xacro  cr5_dh.urdf.xacro  ikfast61_arm.cpp  inertia.xacro  kinect_sensors.xacro  robot_with_kinect.xacro
src/cr5_gazebo/: CMakeLists.txt  package.xml
src/cr5_gazebo/config/: cr5_dh_gazebo_joint_states.yaml  cr5_dh_trajectory_control.yaml  cr5_trajectory_control.yaml  voxblox.rviz
src/cr5_gazebo/launch/: cr5_bringup_moveit.launch  cr5_controllers.launch  cr5_dh_bringup_moveit.launch  cr5_dh_gazebo_states.launch  cr5_dh_gazebo_world.launch  cr5_dh_trajectory_controller.launch  cr5_gazebo.launch  cr5_gazebo_run.launch  cr5_gazebo_states.launch  cr5_gazebo_voxblox.launch  cr5_gazebo_world.launch  cr5_trajectory_controller.launch
src/cr5_gazebo/models/Catch_model/: model.sdf
src/cr5_gazebo/models/Obs1/: model.config  model.sdf
src/cr5_gazebo/models/Obs1/obs2/: model.sdf
src/cr5_gazebo/models/Obs_voxblox/unit_box_backward/: model.config  model.sdf
src/cr5_gazebo/models/moving_sphere/: model.config  model.sdf
src/cr5_gazebo/models/obs_test/Four_box/: model.config
src/cr5_gazebo/models/obs_test/obs_unit_box/: model.sdf
src/cr5_gazebo/models/unit_box/: model.sdf
src/cr5_gazebo/scripts/: moving_sphere.py
src/cr5_gazebo/worlds/: catch_test_2.world  obs_voxblox.world  sim_test.world
src/cr5_planner/: CMakeLists.txt
src/cr5_planner/include/: env.h  header.h  interpolation.h  kinematics.h  planner.h  tree.h
src/cr5_planner/launch/: test.launch  test_dh.launch
src/cr5_planner/src/: .env.cpp.swp  dynamic_test.cpp  env.cpp  interpolation.cpp  kinematics.cpp  plan_test.cpp  planner.cpp  tree.cpp
src/environment_perception/: CMakeLists.txt  clustered_cloud.pcd  octomap.bt  octomap_without_ground.bt  original_cloud.pcd  package.xml
src/environment_perception/include/: DBSCAN_simple.h
src/environment_perception/launch/: static_environment.launch
src/environment_perception/pcd/: cluster_0.pcd  cluster_1.pcd  cluster_2.pcd  cluster_3.pcd  cluster_4.pcd  cluster_5.pcd  cluster_6.pcd  ground_cloud.pcd  map_cloud.pcd  non_ground_cloud.pcd  range_filtered_cloud.pcd  voxel_filtered_cloud.pcd  voxel_gaussian_cloud.pcd
src/environment_perception/rviz/: environment.rviz
src/environment_perception/src/: cluster.cpp  cluster_pcd.cpp  fillting.cpp  occupacy_map.cpp  occupacy_map_pcd.cpp
src/gp_planner/: CMakeLists.txt  package.xml
src/gp_planner/config/: cr5.yaml  cr5_trajectory_control.yaml  parameters.yaml  task.yaml
src/gp_planner/exp_data/: dynamic_gp_0.1  dynamic_gp_0.3  gpmp_0.1  gpmp_0.3  joint_angles.txt  joint_angles_1 (another copy).txt  mpc_0.1  mpc_0.2  real_test_2.txt  real_test_parameters
src/gp_planner/exp_data/new_data_1231/: adgp_0.1  adgp_0.2  adgp_0.3  adgp_0.4  adgp_0.6  adgp_0.6_d  adgp_0.8  adgp_1.0  dgp_0.1  dgp_0.2  dgp_0.4  dgp_0.6  dgp_0.8  gp_0.2  gp_0.4  gp_0.6  mpc_0.2  mpc_0.4  mpc_0.6
src/gp_planner/exp_data/old_data/: dynamic_gp_0.2  dynamic_gp_0.4  gpmp_0.2  gpmp_0.3  joint_angles (another copy).txt  joint_angles (copy).txt  joint_angles_1 (copy).txt  mpc_0.1  mpc_0.2  mpc_0.3  real_test_1.txt
src/gp_planner/include/global_planner/: env.h  header.h  interpolation.h  kinematics.h  planner.h  rrtplanner.h  tree.h
src/gp_planner/include/local_planner/: ArmKinematics.h  ArmModel.h  CostFunction.h  GPInterpolate.h  GaussianFactor.h  GoalFactor.h  LimitFactor.h  ObsFactor.h  Optimizer.h  OptimizerSetting.h  PriorFactor.h  SDF.h  SelfCollisionFactor.h  headers.h
src/gp_planner/include/my_planner/: MyPlanner.h
src/gp_planner/launch/: cr5_bringup_moveit.launch  cr5_controllers.launch  cr5_dobot_bringup.launch  cr5_dobot_control.launch  cr5_gazebo.launch  cr5_obstacle_update.launch  cr5_plan_test.launch  test.launch  test_dh.launch
src/gp_planner/models/Catch_model/: model.config
src/gp_planner/models/Obs_voxblox/Two_box/: model.config  model.sdf
src/gp_planner/models/moving_sphere/: model.sdf
src/gp_planner/models/moving_sphere/moving_sphere/: model.sdf
src/gp_planner/models/pingmu/: model.config  model.sdf
src/gp_planner/models/shebei/: model.config  model.sdf
src/gp_planner/models/zawu/: model.config  model.sdf
src/gp_planner/msg/: BoundingBoxArray.msg
src/gp_planner/scripts/: arm_controller.py  draw_dh.py  draw_hinge.py  draw_joint_angles.py  draw_prob.py  draw_safe_area.py  draw_sigmoid.py  dynamic_sdf.py  moving_sphere.py  static_sdf.py
src/gp_planner/src/global_planner/: dynamic_test.cpp  env.cpp  interpolation.cpp  kinematics.cpp  plan_test.cpp  planner.cpp  rrtplanner.cpp  tree.cpp
src/gp_planner/src/local_planner/: ArmKinematics.cpp  ArmModel.cpp  Optimizer.cpp  OptimizerSetting.cpp  kinematics_test.cpp  planner_test.cpp  sdf_data.txt  sdf_test.cpp
src/gp_planner/src/my_planner/: GetDepth.cpp  MyPlanner.cpp  control_test.cpp  control_test_2.cpp  control_test_3.cpp  plan_test.cpp  sdf_data.txt
src/gp_planner/worlds/: catch_test.world  dynamic_obs.world  dynamic_obs_2.world  obs_test.world  real_obs.world  test_scene_1.world
src/gpmp2_planner_py/: CMakeLists.txt  exec_points.txt  package.xml  points.txt  temp.txt  test.txt
src/gpmp2_planner_py/config/: wam.yaml
src/gpmp2_planner_py/launch/: dynamic_planner_py.launch  gpmp2_planner_py.launch
src/gpmp2_planner_py/problem/: cr5_problem.yaml  wam_problem.yaml
src/gpmp2_planner_py/scripts/: Problem.py  Robot.py  Traj.py  dynamic_test.py  gpmp2_planner_py.py  moving_sphere.py
(+244 files in other folders)
