<?xml version="1.0"?>
<package>
  <name>cr5_gazebo</name>
  <version>0.0.0</version>
  <description>The cr5_gazebo package</description>
  <maintainer email="flt@todo.todo">flt</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>voxblox</build_depend>
  <build_depend>voxblox_ros</build_depend>
  <build_depend>voxblox_msgs</build_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>voxblox</run_depend>
  <run_depend>voxblox_ros</run_depend>
  <run_depend>voxblox_msgs</run_depend>
  <export>

  </export>
</package>
